fix z-index for header

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -130,7 +130,7 @@ a.phone {
 header {
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 1000;
 }
 
 #introduction {
